src/test/deca/context/valid/minus_intvar_int_minus_int_context.deca
// Description :
//
//      Test contextuellement correct de la soustraction d'un int et d'un int dans une variable int
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    int y = 3-2;
}