src/test/deca/context/invalid/divide_intvar_string_divide_int_context.deca
// Description :
//
//      Test contextuellement incorrect de la division d'un string et d'un int dans une variable int
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    int y= "Bonjour" / 3;
}